Remove useless command, fix data types and fix info command

--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,9 @@
 *.dylib
 .idea
 
-# Test binary, built with `go test -c`
+# Test and debug binary, built with `go test -c`
 *.test
+__debug*
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
